--- a/code_analysis_model.ipynb
+++ b/code_analysis_model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMixfnuYTjTc++w1pqZOmF7",
+      "authorship_tag": "ABX9TyOfpbquQBH2Xa64noY9uLC5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -418,35 +418,66 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "srSYoLeRXxUK",
-        "outputId": "beda56b1-dc9f-4156-838b-af95fe54bf96"
+        "outputId": "766154ce-431b-44ad-e67e-dccef705ce1c"
       },
-      "execution_count": 28,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "updating: content/models/custom_seq2seq_model/ (stored 0%)\n",
-            "updating: content/models/custom_seq2seq_model/tokenizer_config.json (deflated 94%)\n",
-            "updating: content/models/custom_seq2seq_model/special_tokens_map.json (deflated 97%)\n",
-            "updating: content/models/custom_seq2seq_model/tokenizer.json (deflated 82%)\n",
-            "updating: content/models/custom_seq2seq_model/merges.txt (deflated 54%)\n",
-            "updating: content/models/custom_seq2seq_model/vocab.json (deflated 59%)\n",
-            "updating: content/models/custom_seq2seq_model/model.safetensors (deflated 7%)\n",
-            "updating: content/models/custom_seq2seq_model/config.json (deflated 61%)\n",
-            "updating: content/models/custom_seq2seq_model/generation_config.json (deflated 33%)\n"
+            "  adding: content/models/custom_seq2seq_model/ (stored 0%)\n",
+            "  adding: content/models/custom_seq2seq_model/tokenizer_config.json (deflated 94%)\n",
+            "  adding: content/models/custom_seq2seq_model/special_tokens_map.json (deflated 97%)\n",
+            "  adding: content/models/custom_seq2seq_model/tokenizer.json (deflated 82%)\n",
+            "  adding: content/models/custom_seq2seq_model/merges.txt (deflated 54%)\n",
+            "  adding: content/models/custom_seq2seq_model/vocab.json (deflated 59%)\n",
+            "  adding: content/models/custom_seq2seq_model/model.safetensors (deflated 7%)\n",
+            "  adding: content/models/custom_seq2seq_model/config.json (deflated 61%)\n",
+            "  adding: content/models/custom_seq2seq_model/generation_config.json (deflated 33%)\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!python test_model.py"
+      ],
       "metadata": {
-        "id": "qrcmk7mBZwt5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qrcmk7mBZwt5",
+        "outputId": "c79650b4-a7fb-4367-c278-fd926d9a0442"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2024-12-01 04:20:42.723406: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "2024-12-01 04:20:42.744259: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "2024-12-01 04:20:42.750342: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "2024-12-01 04:20:42.765477: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "2024-12-01 04:20:43.956924: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+            "Code Snippet: eval(user_input)\n",
+            "Suggestions: Avoid using eval as it can execute arbitrary code. Use ast.literal_eval for safer parsing.\n",
+            "\n",
+            "Code Snippet: os.system('rm -rf /')\n",
+            "Suggestions: No specific issue detected.\n",
+            "\n",
+            "Code Snippet: query = 'SELECT * FROM users WHERE name = ' + user_input\n",
+            "Suggestions: Avoid string concatenation in SQL queries. Use parameterized queries to prevent SQL injection.\n",
+            "\n",
+            "Code Snippet: print('Hello, world!')\n",
+            "Suggestions: No specific issue detected.\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
