--- a/code_analysis_model_1.0.ipynb
+++ b/code_analysis_model_1.0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNaOmaFKh67FjxGQsxD+fjy",
+      "authorship_tag": "ABX9TyNWI5GuJuAaDVPP5h+r1gm/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -983,6 +983,232 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python preprocess.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zx8uRf-hm6BM",
+        "outputId": "c362a290-3ba8-4f69-f418-c4e81030decd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Loading dataset from: custom_dataset.json\n",
+            "Train dataset size: 1521\n",
+            "Test dataset size: 381\n",
+            "Data before tokenization: {'func': ['def overly_complex_parameters():\\n    def process(data, config, env, context):\\n        return True', \"def hardcoded_api_key():\\n    api_key = '12345-abcdef-67890'\\n    return api_key\", 'def insecure_data_storage():\\n    stored_password = password'], 'target': ['Simplify parameters by grouping related items into objects or dictionaries.', 'Avoid hardcoding API keys. Use secure storage or environment variables.', 'Encrypt sensitive data before storing it to protect against unauthorized access.']}\n",
+            "Map: 100% 1521/1521 [00:00<00:00, 2997.50 examples/s]\n",
+            "Data after tokenization: {'input_ids': tensor([[    1,   536,  1879,  ...,     0,     0,     0],\n",
+            "        [    1,   536,  7877,  ...,     0,     0,     0],\n",
+            "        [    1,   536, 22785,  ...,     0,     0,     0]]), 'attention_mask': tensor([[1, 1, 1,  ..., 0, 0, 0],\n",
+            "        [1, 1, 1,  ..., 0, 0, 0],\n",
+            "        [1, 1, 1,  ..., 0, 0, 0]]), 'labels': tensor([[    1, 24490,  1164,  1472,   635, 12116,  3746,  1516,  1368,  2184,\n",
+            "           578, 16176,    18,     2,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0],\n",
+            "        [    1,  3769,   839,  7877,  2014,  1491,  1311,    18,  2672,  8177,\n",
+            "          2502,   578,  3330,  3152,    18,     2,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0],\n",
+            "        [    1, 13129, 16692,   501,  1865, 15729,   518,   358, 17151,  5314,\n",
+            "           640,  8434,  2006,    18,     2,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0]])}\n",
+            "Data before tokenization: {'func': ['def inconsistent_indentation():\\n    def example():\\n      return True', \"def inadequate_error_messages():\\n    try:\\n        risky_code()\\n    except ValueError:\\n        raise Exception('Error')\", 'def unnecessary_early_return():\\n    if condition:\\n        return True\\n    return False'], 'target': ['Ensure consistent indentation for better readability and maintainability.', 'Provide detailed error messages to aid in debugging.', 'Combine early returns to simplify code.']}\n",
+            "Map: 100% 381/381 [00:00<00:00, 3244.04 examples/s]\n",
+            "Data after tokenization: {'input_ids': tensor([[    1,   536, 27403,  ...,     0,     0,     0],\n",
+            "        [    1,   536,   316,  ...,     0,     0,     0],\n",
+            "        [    1,   536, 19908,  ...,     0,     0,     0]]), 'attention_mask': tensor([[1, 1, 1,  ..., 0, 0, 0],\n",
+            "        [1, 1, 1,  ..., 0, 0, 0],\n",
+            "        [1, 1, 1,  ..., 0, 0, 0]]), 'labels': tensor([[    1, 12512, 11071, 12018,   364,  7844,   855,  2967,   471, 17505,\n",
+            "          2967,    18,     2,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0],\n",
+            "        [    1, 20632,  6864,   555,  2743,   358, 20702,   316, 10450,    18,\n",
+            "             2,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0],\n",
+            "        [    1, 21720, 11646,  1135,   358, 16499,   981,    18,     2,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "             0,     0,     0,     0,     0,     0,     0,     0]])}\n",
+            "Creating json from Arrow format: 100% 2/2 [00:00<00:00, 15.17ba/s]\n",
+            "Creating json from Arrow format: 100% 1/1 [00:00<00:00, 32.02ba/s]\n",
+            "Processed data saved at: dataset/processed_data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python train_model.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3CnHQQg0o5Wi",
+        "outputId": "461f3bbf-6e31-46f7-972e-65661306f2ed"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2024-12-03 10:35:34.388374: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "2024-12-03 10:35:34.409209: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "2024-12-03 10:35:34.415150: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "2024-12-03 10:35:34.429494: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "2024-12-03 10:35:35.633166: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+            "Map: 100% 381/381 [00:00<00:00, 2586.46 examples/s]\n",
+            "Passing a tuple of `past_key_values` is deprecated and will be removed in Transformers v4.48.0. You should pass an instance of `EncoderDecoderCache` instead, e.g. `past_key_values=EncoderDecoderCache.from_legacy_cache(past_key_values)`.\n",
+            "Epoch 1/10 Loss: 0.27427098569594655\n",
+            "Epoch 2/10 Loss: 0.11517170372753945\n",
+            "Epoch 3/10 Loss: 0.05935945515850867\n",
+            "Epoch 4/10 Loss: 0.032880394704874576\n",
+            "Epoch 5/10 Loss: 0.021194508918891037\n",
+            "Epoch 6/10 Loss: 0.013630332778149292\n",
+            "Epoch 7/10 Loss: 0.010106913057300129\n",
+            "Epoch 8/10 Loss: 0.008016407905785694\n",
+            "Epoch 9/10 Loss: 0.006848023719309519\n",
+            "Epoch 10/10 Loss: 0.006778569268111599\n",
+            "Evaluating model on test dataset...\n",
+            "Precision: 0.8688\n",
+            "Recall: 1.0000\n",
+            "F1 Score: 0.9298\n",
+            "Input Code: def inconsistent_indentation():\n",
+            "    def example():\n",
+            "      return True\n",
+            "Generated Suggestion: Ensure consistent indentation for better readability and maintainability.\n",
+            "Ground Truth Suggestion: Ensure consistent indentation for better readability and maintainability.\n",
+            "\n",
+            "Input Code: def inadequate_error_messages():\n",
+            "    try:\n",
+            "        risky_code()\n",
+            "    except ValueError:\n",
+            "        raise Exception('Error')\n",
+            "Generated Suggestion: Provide detailed error messages to aid debugging.\n",
+            "Ground Truth Suggestion: Provide detailed error messages to aid in debugging.\n",
+            "\n",
+            "Input Code: def unnecessary_early_return():\n",
+            "    if condition:\n",
+            "        return True\n",
+            "    return False\n",
+            "Generated Suggestion: Combine early returns to simplify code.\n",
+            "Ground Truth Suggestion: Combine early returns to simplify code.\n",
+            "\n",
+            "Input Code: def unsafe_deserialization(data):\n",
+            "    obj = pickle.loads(data)\n",
+            "    return obj\n",
+            "Generated Suggestion: Validate and sanitize data before deserialization to prevent remote code execution.\n",
+            "Ground Truth Suggestion: Validate and sanitize data before deserialization to prevent remote code execution.\n",
+            "\n",
+            "Input Code: def long_function():\n",
+            "    # This function spans over 100 lines\n",
+            "    pass\n",
+            "Generated Suggestion: Refactor long functions into smaller, manageable units.\n",
+            "Ground Truth Suggestion: Refactor long functions into smaller, manageable units.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!zip -r models.zip ./models/custom_seq2seq_model"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gT1nbY52Rbvz",
+        "outputId": "08c942dc-9c54-4848-ae0c-017d0ebdcd7c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  adding: models/custom_seq2seq_model/ (stored 0%)\n",
+            "  adding: models/custom_seq2seq_model/tokenizer_config.json (deflated 94%)\n",
+            "  adding: models/custom_seq2seq_model/special_tokens_map.json (deflated 97%)\n",
+            "  adding: models/custom_seq2seq_model/tokenizer.json (deflated 82%)\n",
+            "  adding: models/custom_seq2seq_model/merges.txt (deflated 54%)\n",
+            "  adding: models/custom_seq2seq_model/vocab.json (deflated 59%)\n",
+            "  adding: models/custom_seq2seq_model/model.safetensors (deflated 7%)\n",
+            "  adding: models/custom_seq2seq_model/config.json (deflated 61%)\n",
+            "  adding: models/custom_seq2seq_model/generation_config.json (deflated 33%)\n"
+          ]
+        }
+      ]
     }
   ]
 }
